# mellohi

./: .gitignore  .gitmodules  CMakeLists.txt  FreeLookCamera.cs  FreeLookCamera.gd  Mellohi.sln  MeshInstance3D.gd  Voxel Game.csproj  Voxel Game.sln  icon.svg.import  main.tscn  mesh_instance_3d.tscn  node_3d.tscn  project.godot  uv.png.import  voxelgame.csproj  voxelgame.sln
Debug/: DebugOverlay.cs  debug_overlay.gd  debug_overlay.tscn
Mellohi/: CMakeLists.txt  imgui.ini
Mellohi/include/mellohi/: app.h  asset_id.h  log.h  types.h
Mellohi/include/mellohi/graphics/: buffer.h  shader.h  texture.h  vertex_array.h  window.h
Mellohi/include/mellohi/math/: mat4.h  vec2.h  vec2.hpp  vec3.h  vec3.hpp  vec4.h  vec4.hpp
Mellohi/include/mellohi/nodes/: node.h
Mellohi/src/mellohi/: app.cpp  asset_id.cpp
Mellohi/src/mellohi/graphics/: buffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  window.cpp
Mellohi/src/mellohi/math/: mat4.cpp
Mellohi/src/mellohi/nodes/: node.cpp
Overlay/: DebugOverlay.cs  debug_overlay.tscn
Sandbox/: CMakeLists.txt
Sandbox/assets/sandbox/shaders/: test.frag  test.vert
Sandbox/include/: debug_overlay_node.h
Sandbox/src/: debug_overlay_node.cpp  main.cpp
World/: Chunk.cs  ChunkMesh.cs  Dimension.cs  World.cs  chunk.tscn  debug_world.tscn  dimension.tscn  world.tscn
World/Chunk/: Chunk.cs  ChunkMesh.cs  chunk.tscn
World/Voxels/: Voxel.cs
addons/blocks/: blocks_plugin.gd  plugin.cfg  plugin_options.gd
addons/blocks/OldTerrain/: Block.cs  Chunk.cs  ChunkData.cs  ChunkMesh.cs  ChunkMeshInstance.cs  ChunkMeshManager.cs  Terrain.cs
addons/blocks/Terrain/: Block.cs  Chunk.cs  ChunkData.cs  ChunkMesh.cs  ChunkMeshInstance.cs  ChunkMeshManager.cs  Terrain.cs  void_block.tres
addons/blocks/block/: block.gd  block_materials.gd  blocks.gd
addons/blocks/mesh/: chunk_mesh.gd  chunk_mesh_manager.gd
addons/blocks/terrain/: chunk.gd  chunk_instance.gd  terrain.gd
addons/mellohi/: identifier.gd  mellohi.gd  mellohi_plugin.gd  mellohi_settings.gd  plugin.cfg
addons/mellohi/blocks/: air_block.tres  block.gd  block.gdshader  block_material.gd  block_registry.gd
addons/mellohi/terrain/: terrain.gd
addons/plugin_refresher/: plugin_refresher.gd
addons/simple_free_look_camera/: camera.gd  plugin.cfg  simple_free_look_camera.gd
assets/: block1.png.import  block2.png.import  block3.png.import
assets/mellohi/fonts/: JetBrainsMono_LICENSE.txt
assets/mellohi/shaders/: mesh.wgsl
data/blocks/: air.tres  dirt.tres  grass.tres  stone.tres
examples/sandbox/: CMakeLists.txt
examples/sandbox/assets/sandbox/: learn.wgsl  pyramid.learn3d
examples/sandbox/assets/sandbox/shaders/: basic.wgsl  mesh.wgsl
examples/sandbox/include/: camera.h  camera.hpp  learn3d_mesh.h  learn3d_mesh.hpp  learn_mesh.h  learn_mesh.hpp  mesh.hpp
examples/sandbox/src/: camera.cpp  learn3d_mesh.cpp  learn_mesh.cpp  main.cpp  mesh.cpp
game/: main.tscn
game/assets/: pink_sky.png.import
game/assets/blocks/: brick_grey.png.import  brick_red.png.import  cactus_inside.png.import  cactus_side.png.import  cactus_top.png.import  cotton_blue.png.import  cotton_green.png.import  cotton_red.png.import  cotton_tan.png.import  dirt.png.import  dirt_grass.png.import  dirt_sand.png.import  dirt_snow.png.import  fence_stone.png.import  fence_wood.png.import  glass.png.import  glass_frame.png.import  grass1.png.import  grass2.png.import  grass3.png.import  grass4.png.import  grass_brown.png.import  grass_tan.png.import  grass_top.png.import  gravel_dirt.png.import  gravel_stone.png.import  greysand.png.import  greystone.png.import  greystone_ruby.png.import  greystone_ruby_alt.png.import  greystone_sand.png.import  ice.png.import  lava.png.import  leaves.png.import  leaves_orange.png.import  leaves_orange_transparent.png.import  leaves_transparent.png.import  mushroom_brown.png.import  mushroom_red.png.import  mushroom_tan.png.import  (+45 more)
game/assets/items/: apple.png.import  arrow.png.import  axe_bronze.png.import  axe_diamond.png.import  axe_gold.png.import  axe_iron.png.import  axe_silver.png.import  boat.png.import  bow.png.import  bowArrow.png.import  bowl.png.import  fish.png.import  fish_cooked.png.import  fishingPole.png.import  flail_bronze.png.import  flail_diamond.png.import  flail_gold.png.import  flail_iron.png.import  flail_silver.png.import  hammer_bronze.png.import  hammer_diamond.png.import  hammer_gold.png.import  hammer_iron.png.import  hammer_silver.png.import  hoe_bronze.png.import  hoe_diamond.png.import  hoe_gold.png.import  hoe_iron.png.import  hoe_silver.png.import  minecart.png.import  ore_coal.png.import  ore_diamond.png.import  ore_emerald.png.import  ore_gold.png.import  ore_iron.png.import  ore_ironAlt.png.import  ore_ruby.png.import  ore_silver.png.import  (+18 more)
game/blocks/: dirt_block.tres  grass_block.tres  stone_block.tres
game/player/: player.tscn  player_block_interactor.gd  player_movement.gd
include/: mellohi.h  mellohi.hpp
include/mellohi/: buttons.hpp  camera.hpp  game.hpp  input.hpp  performance_hud.h  performance_hud.hpp  transform.hpp  types.h  types.hpp
mellohi/: CMakeLists.txt
mellohi/include/: mellohi.h
mellohi/include/mellohi/: asset_id.h  game.h
mellohi/include/mellohi/graphics/: bind_group.h  buffer.h  buffer.hpp  device.h  pipeline.h  render_pass.h  uniform_buffer.h  window.h
mellohi/include/mellohi/nodes/: node.h  performance_hud_node.h
mellohi/src/mellohi/: asset_id.cpp  game.cpp  performance_hud.cpp
mellohi/src/mellohi/graphics/: bind_group.cpp  buffer.cpp  device.cpp  pipeline.cpp  render_pass.cpp  window.cpp
mellohi/src/mellohi/nodes/: node.cpp  performance_hud_node.cpp
sandbox/: CMakeLists.txt
sandbox/include/: learn3d_mesh.h  learn_mesh.h  learn_mesh_node.h
sandbox/src/: camera.cpp  learn3d_mesh.cpp  learn_mesh.cpp  learn_mesh_node.cpp  main.cpp
src/: implementation.cpp
src/mellohi/: asset_id.cpp  camera.cpp  game.cpp  input.cpp  performance_hud.cpp  transform.cpp
src/private/: implementation.cpp
src/public/: mellohi.hpp
voxelfi/: CMakeLists.txt
voxelfi/src/: dummy.cpp
(+123 files in other folders)
